Add fernet dependency

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,6 +41,8 @@ kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime",
 
 discord-jda = { group = "net.dv8tion", name = "JDA", version.ref = "discord-jda" }
 
+crypto-fernet = { group = "com.macasaet.fernet", name = "fernet-java8", version = "1.4.2" }
+
 # jda-ktx looks promising, but if it drops support, I'm in big trouble. I'll jsut make my own stuff
 
 # extra
