Add RSSParser library

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,6 +43,8 @@ discord-jda = { group = "net.dv8tion", name = "JDA", version.ref = "discord-jda"
 
 crypto-fernet = { group = "com.macasaet.fernet", name = "fernet-java8", version = "1.4.2" }
 
+rssParser = { group = "com.prof18.rssparser", name = "rssparser", version = "6.0.3" }
+
 # jda-ktx looks promising, but if it drops support, I'm in big trouble. I'll jsut make my own stuff
 
 # extra
