--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,6 +51,10 @@ exposed-jdbc = { group = "org.jetbrains.exposed", name = "exposed-jdbc", version
 
 exposed-kotlin-datetime = { group = "org.jetbrains.exposed", name = "exposed-kotlin-datetime", version.ref = "kotlinx-exposed" }
 exposed-json = { group = "org.jetbrains.exposed", name = "exposed-json", version.ref = "kotlinx-exposed" }
+#drivers
+exposed-postgresql = { group = "org.postgresql", name = "postgresql", version = "42.2.27" }
+exposed-mariadb = { group = "mysql", name = "mysql-connector-java", version = "8.0.33" } # Hikari pooling available if needed
+exposed-sqlite = { group = "org.xerial", name = "sqlite-jdbc", version = "3.43.0" }
 
 discord-jda = { group = "net.dv8tion", name = "JDA", version.ref = "discord-jda" }
 
@@ -88,5 +92,5 @@ exposed = [
     "exposed-dao",
     "exposed-jdbc",
     "exposed-kotlin-datetime",
-    "exposed-json"
+    "exposed-json",
 ]
