--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -80,6 +80,8 @@ slf4k = { group = "ca.solo-studios", name = "slf4k", version = "0.5.3" }
 ## The reliable, generic, fast and flexible logging framework for Java
 logback = { group = "ch.qos.logback", name = "logback-classic", version = "1.4.11" }
 
+google-findbugs = { group = "com.google.code.findbugs", name = "jsr305", version = "3.0.2" }
+
 [bundles]
 
 kotlinx-serialization = [
