--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,8 +53,9 @@ exposed-kotlin-datetime = { group = "org.jetbrains.exposed", name = "exposed-kot
 exposed-json = { group = "org.jetbrains.exposed", name = "exposed-json", version.ref = "kotlinx-exposed" }
 #drivers
 exposed-postgresql = { group = "org.postgresql", name = "postgresql", version = "42.2.27" }
-exposed-mariadb = { group = "mysql", name = "mysql-connector-java", version = "8.0.33" } # Hikari pooling available if needed
-exposed-sqlite = { group = "org.xerial", name = "sqlite-jdbc", version = "3.43.0.0" }
+exposed-mysql = { group = "mysql", name = "mysql-connector-java", version = "8.0.33" } # Hikari pooling available if needed
+exposed-mariadb = { group = "org.mariadb.jdbc", name = "mariadb-java-client", version = "3.2.0" }
+exposed-sqlite = { group = "org.xerial", name = "sqlite-jdbc", version = "3.36.0" }
 
 discord-jda = { group = "net.dv8tion", name = "JDA", version.ref = "discord-jda" }
 
