--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -83,7 +83,7 @@ logback = { group = "ch.qos.logback", name = "logback-classic", version = "1.4.1
 
 google-findbugs = { group = "com.google.code.findbugs", name = "jsr305", version = "3.0.2" }
 
-lavaplayer = { group = "com.sedmelluq", name = "lavaplayer", version = "1.3.77" }
+lavaplayer = { group = "dev.arbjerg", name = "lavaplayer", version = "2.0.4" }
 
 [bundles]
 
