Fix dependabot 7, declare json-json explicitly

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -85,6 +85,8 @@ google-findbugs = { group = "com.google.code.findbugs", name = "jsr305", version
 
 lavaplayer = { group = "dev.arbjerg", name = "lavaplayer", version = "2.0.4" }
 
+json-json = { group = "org.json", name = "json", version = "20231013" }
+
 [bundles]
 
 kotlinx-serialization = [
