Publish API to maven

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,8 @@ kotlinx-exposed = "0.47.0"
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
+axion-release = { id = "pl.allegro.tech.build.axion-release", version = "1.16.1" }
+
 shadow-plugin = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
 
 [libraries]
