--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -65,8 +65,8 @@ rssParser = { group = "com.prof18.rssparser", name = "rssparser", version = "6.0
 
 okio = { group = "com.squareup.okio", name = "okio", version = "3.10.2"}
 
-junit-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
-junit-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
+junit-api = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit" }
+junit-engine = { group = "org.junit.platform", name = "junit-platform-launcher" }
 
 google-guava = { group = "com.google.guava", name = "guava", version = "33.4.6-jre" }
 
